--- a/cards.html
+++ b/cards.html
@@ -181,13 +181,26 @@
 
         <!-- Card Fullscreen Overlay -->
         <div id="card-fullscreen-overlay" class="fullscreen-overlay">
-            <button id="fullscreen-close-btn" class="close-button">&times;</button>
+            <button id="fullscreen-close-btn" class="close-button">
+                &times;
+            </button>
             <div class="fullscreen-content">
-                <img id="fullscreen-card-image" src="" alt="Card Image" class="fullscreen-card-image" />
+                <img
+                    id="fullscreen-card-image"
+                    src=""
+                    alt="Card Image"
+                    class="fullscreen-card-image"
+                />
             </div>
             <div class="card-description">
-                <h3 id="fullscreen-card-name" class="text-2xl font-bold golden-text mb-2"></h3>
-                <p id="fullscreen-card-meaning" class="text-gray-300 text-sm leading-relaxed"></p>
+                <h3
+                    id="fullscreen-card-name"
+                    class="text-2xl font-bold golden-text mb-2"
+                ></h3>
+                <p
+                    id="fullscreen-card-meaning"
+                    class="text-gray-300 text-sm leading-relaxed"
+                ></p>
             </div>
         </div>
 
