--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
                 window.Telegram.WebApp.ready();
                 window.Telegram.WebApp.expand();
                 console.log("mini app ready");
-                const tgUser = window.Telegram.WebApp.initDataUnsafe?.user;
+                const tgUser = Telegram.WebApp.initDataUnsafe?.user;
                 console.log(tgUser);
             }
 
